--- a/html/ux/footer.html
+++ b/html/ux/footer.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/ion.rangeSlider.css" type="text/css" rel="stylesheet">
     <link href="/css/lightslider.css" type="text/css" rel="stylesheet">
-    <link href="/css/air-datepicker.css" type="text/css" rel="stylesheet">
+    <link href="/css/lightbox.css" type="text/css" rel="stylesheet">
     <link href="/fonts/stylesheet.css" type="text/css" rel="stylesheet">
     <link href="/style.css" type="text/css" rel="stylesheet">
     <script src="/js/jquery-3.6.0.min.js" defer></script>
-    <script src="/js/air-datepicker.js" defer></script>
-    <script src="/js/ion.rangeSlider.js" defer></script>
     <script src="/js/jquery.mask.js" defer></script>
+    <script src="/js/lightbox.js" defer></script>
     <script src="/js/lightslider.js" defer></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=fced5e55-2779-4df7-8baf-39cc561448b5&amp;lang=ru_RU" type="text/javascript"></script>
+    <script src="/js/map.js" defer></script>
     <script src="/common-dist.js" defer> </script>
   </head>
   <!-- range slider-->
@@ -66,11 +66,11 @@
         <div class="col-3">
           <div class="feedback-footer-item"> <span>Официальный представитель Производственная компания "Дорожные технологии" </span><b>B 192148, г. Санкт-Петербург, ул. Седова, д. 13</b></div>
           <div class="feedback-footer-item"><span>Телефон:</span><a href="#">+7 (812) 900 61 90</a></div>
-          <div class="feedback-footer-item"><span>Почта:</span><a href="#">mail@mail.ru</a></div>
+          <div class="feedback-footer-item"><span>Почта:</span><a href="#">info@pk-dorteh.ru</a></div>
         </div>
         <div class="col-3 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
           <div class="feedback-footer-item"><a href="#"> +7 (495) 969 58 69</a></div>
-          <div class="feedback-footer-item"><a href="#">mail@mail.ru</a></div>
+          <div class="feedback-footer-item"><a href="#">dds@merko-russland.com</a></div>
           <div class="feedback-footer-item"><span>Адрес:</span><b>141031, МО, г. Мытищи,<br>пос. Нагорное, ул. Центральная, вл. 3, с. 3, пом. 3</b></div>
             <div class="social"><a href="#"><img src="/images/social/vk-white.svg" alt=""><img class="ico-hover" src="/images/social/vk-black.svg" alt=""></a>
             </div>
