--- a/html/pages/home.html
+++ b/html/pages/home.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/ion.rangeSlider.css" type="text/css" rel="stylesheet">
     <link href="/css/lightslider.css" type="text/css" rel="stylesheet">
-    <link href="/css/air-datepicker.css" type="text/css" rel="stylesheet">
+    <link href="/css/lightbox.css" type="text/css" rel="stylesheet">
     <link href="/fonts/stylesheet.css" type="text/css" rel="stylesheet">
     <link href="/style.css" type="text/css" rel="stylesheet">
     <script src="/js/jquery-3.6.0.min.js" defer></script>
-    <script src="/js/air-datepicker.js" defer></script>
-    <script src="/js/ion.rangeSlider.js" defer></script>
     <script src="/js/jquery.mask.js" defer></script>
+    <script src="/js/lightbox.js" defer></script>
     <script src="/js/lightslider.js" defer></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=fced5e55-2779-4df7-8baf-39cc561448b5&amp;lang=ru_RU" type="text/javascript"></script>
+    <script src="/js/map.js" defer></script>
     <script src="/common-dist.js" defer> </script>
   </head>
   <!-- range slider-->
@@ -24,14 +24,14 @@
     <!-- header start-->
     <!--include ../blocks/header.pug-->
     <!-- header end-->
-    <header>
+    <header class="main-header">
       <div class="main-grid">
         <div class="col-12">
           <div class="vertical-align">
-            <div class="feedback-header"><a class="phone-btn" href="#"> <i></i><span>+ 971 56 115 16 24</span></a><a class="mail-btn" href="#"> <i></i><span>+ 971 56 115 16 24</span></a></div>
+            <div class="feedback-header"><a class="phone-btn" href="#"> <i></i><span>+7 (495) 969 58 69</span></a><a class="mail-btn" href="#"> <i></i><span>dds@merko-russland.com</span></a></div>
           </div>
         </div>
-        <div class="col-3 logo-container vertical-align"><a class="logo" href="#"> <img src="/images/logo.svg" alt=""></a></div>
+        <div class="col-3 logo-container vertical-align"><a class="logo logo-white" href="#"> <img src="/images/logo.svg" alt=""></a><a class="logo logo-red" href="#"> <img src="/images/logo-red.svg" alt=""></a></div>
         <div class="col-9 vertical-align">
           <nav class="nav-header">
             <ul class="ln">
@@ -54,7 +54,9 @@
       <div class="main-home-img img-cover"><img src="/images/main-bg.jpg" alt=""></div>
       <div class="main-home-gradient"></div>
       <div class="num-slider"> 
-        <div class="current">1</div><span>/</span>
+        <div class="current">
+          <ul class="ln num-box"> </ul>
+        </div><span>/</span>
         <div class="total">1</div>
       </div>
       <div class="main-home-slider main-slider">
@@ -62,7 +64,7 @@
           <div class="main-grid">
             <div class="col-7 col-offset-3">
               <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>Производительностью от 80 до 450 тонн/час</h3>
+              <h3>1 Производительностью от 80 до 450 тонн/час</h3>
             </div>
           </div>
         </div>
@@ -70,7 +72,7 @@
           <div class="main-grid">
             <div class="col-7 col-offset-3">
               <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>Производительностью от 80 до 450 тонн/час</h3>
+              <h3>2 Производительностью от 80 до 450 тонн/час</h3>
             </div>
           </div>
         </div>
@@ -78,7 +80,7 @@
           <div class="main-grid">
             <div class="col-7 col-offset-3">
               <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>Производительностью от 80 до 450 тонн/час</h3>
+              <h3>3 Производительностью от 80 до 450 тонн/час</h3>
             </div>
           </div>
         </div>
@@ -86,13 +88,12 @@
           <div class="main-grid">
             <div class="col-7 col-offset-3">
               <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>Производительностью от 80 до 450 тонн/час</h3>
+              <h3>4 Производительностью от 80 до 450 тонн/час</h3>
             </div>
           </div>
         </div>
       </div>
       <div class="main-full">
-        <div class="loop-ico loop-main-btn"></div>
         <div class="main-scroll-down"><i></i></div>
       </div>
     </div>
@@ -1083,11 +1084,11 @@
         <div class="col-3">
           <div class="feedback-footer-item"> <span>Официальный представитель Производственная компания "Дорожные технологии" </span><b>B 192148, г. Санкт-Петербург, ул. Седова, д. 13</b></div>
           <div class="feedback-footer-item"><span>Телефон:</span><a href="#">+7 (812) 900 61 90</a></div>
-          <div class="feedback-footer-item"><span>Почта:</span><a href="#">mail@mail.ru</a></div>
+          <div class="feedback-footer-item"><span>Почта:</span><a href="#">info@pk-dorteh.ru</a></div>
         </div>
         <div class="col-3 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
           <div class="feedback-footer-item"><a href="#"> +7 (495) 969 58 69</a></div>
-          <div class="feedback-footer-item"><a href="#">mail@mail.ru</a></div>
+          <div class="feedback-footer-item"><a href="#">dds@merko-russland.com</a></div>
           <div class="feedback-footer-item"><span>Адрес:</span><b>141031, МО, г. Мытищи,<br>пос. Нагорное, ул. Центральная, вл. 3, с. 3, пом. 3</b></div>
             <div class="social"><a href="#"><img src="/images/social/vk-white.svg" alt=""><img class="ico-hover" src="/images/social/vk-black.svg" alt=""></a>
             </div>
