--- a/html/pages/product/catalog.html
+++ b/html/pages/product/catalog.html
@@ -194,38 +194,10 @@
                         <div>Производительность:</div><b>130-150 т/ч  </b>
                       </li>
                       <li>
-                        <div>Мощность</div><b>80 кВт</b>
+                        <div>Мощность:</div><b>80 кВт</b>
                       </li>
                       <li>
-                        <div>Площадь установки:</div><b>40м3</b>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="btn-product-container">
-                    <div><a class="btn btn--red" href="#">Забронировать</a></div>
-                    <div class="product-item-price">150 млн. руб.</div>
-                  </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="product-item-hint">Отгрузка 3 дня</div>
-                <div class="product-item">
-                  <div class="more-btn--white product-btn-hover"><i></i></div>
-                  <div class="product-item-img">
-                    <h3>Грунтосмесительная установка WCZ400</h3>
-                    <div class="product-item-cover img-cover"><img src="/images/temp/product/1.jpg" alt=""></div>
-                    <div class="more-btn--white"><i></i></div>
-                  </div>
-                  <div class="product-item-info"> 
-                    <ul class="ln product-item-description">
-                      <li>
-                        <div>Производительность:</div><b>130-150 т/ч  </b>
-                      </li>
-                      <li>
-                        <div>Мощность</div><b>80 кВт</b>
-                      </li>
-                      <li>
-                        <div>Площадь установки:</div><b>40м3</b>
+                        <div>Площадь установки:</div><b>40м <sup>3 </sup></b>
                       </li>
                     </ul>
                   </div>
@@ -250,10 +222,10 @@
                         <div>Производительность:</div><b>130-150 т/ч  </b>
                       </li>
                       <li>
-                        <div>Мощность</div><b>80 кВт</b>
+                        <div>Мощность:</div><b>80 кВт</b>
                       </li>
                       <li>
-                        <div>Площадь установки:</div><b>40м3</b>
+                        <div>Площадь установки:</div><b>40м <sup>3 </sup></b>
                       </li>
                     </ul>
                   </div>
@@ -278,10 +250,38 @@
                         <div>Производительность:</div><b>130-150 т/ч  </b>
                       </li>
                       <li>
-                        <div>Мощность</div><b>80 кВт</b>
+                        <div>Мощность:</div><b>80 кВт</b>
                       </li>
                       <li>
-                        <div>Площадь установки:</div><b>40м3</b>
+                        <div>Площадь установки:</div><b>40м <sup>3 </sup></b>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="btn-product-container">
+                    <div><a class="btn btn--red" href="#">Забронировать</a></div>
+                    <div class="product-item-price">150 млн. руб.</div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="product-item-hint">Отгрузка 3 дня</div>
+                <div class="product-item">
+                  <div class="more-btn--white product-btn-hover"><i></i></div>
+                  <div class="product-item-img">
+                    <h3>Грунтосмесительная установка WCZ400</h3>
+                    <div class="product-item-cover img-cover"><img src="/images/temp/product/1.jpg" alt=""></div>
+                    <div class="more-btn--white"><i></i></div>
+                  </div>
+                  <div class="product-item-info"> 
+                    <ul class="ln product-item-description">
+                      <li>
+                        <div>Производительность:</div><b>130-150 т/ч  </b>
+                      </li>
+                      <li>
+                        <div>Мощность:</div><b>80 кВт</b>
+                      </li>
+                      <li>
+                        <div>Площадь установки:</div><b>40м <sup>3 </sup></b>
                       </li>
                     </ul>
                   </div>
@@ -292,6 +292,17 @@
                 </div>
             </div>
           </div>
+            <!-- pagination-component start-->
+            <div class="pagination">
+              <li class="previous"><a class="disabled" href="#">Назад</a></li>
+              <li class="selected"><a> 1 </a></li>
+              <li><a href="#">2 </a></li>
+              <li><a href="#">3 </a></li>
+              <li><a class="pagination-dotted" href="#">...</a></li>
+              <li><a href="#">20</a></li>
+              <li class="next"><a href="#">Вперед</a></li>
+            </div>
+            <!-- pagination-component start-->
         </div>
       </div>
       <div class="stub"></div>
