--- a/html/pages/vacancies/catalog.html
+++ b/html/pages/vacancies/catalog.html
@@ -76,47 +76,47 @@
             <div class="col-6"> 
               <div class="input-box">
                 <label>Ваше имя:*</label>
-                  <input class="input-decorate require" type="text" placeholder="Введите">
-              </div>
-            </div>
-            <div class="col-6"> 
-              <div class="input-box">
-                <label>Ваша должность:*</label>
-                  <input class="input-decorate require" type="text" placeholder="Введите">
-              </div>
-            </div>
-            <div class="col-6"> 
-              <div class="input-box">
-                <label>Ваш телефон:*</label>
-                  <input class="input-decorate phone-mask require" type="text" placeholder=" +7 000 - 00 – 00 ">
+                  <input class="input-decorate require" type="text" placeholder="Введите имя">
               </div>
             </div>
             <div class="col-6"> 
               <div class="input-box">
                 <label>Ваша должность:</label>
-                  <input class="input-decorate undefined" type="text" placeholder="Введите">
+                  <input class="input-decorate require" type="text" placeholder="Введите должность">
               </div>
             </div>
             <div class="col-6"> 
               <div class="input-box">
-                <label>Email</label>
-                  <input class="input-decorate check-mail undefined" type="email" placeholder="Email">
+                <label>Ваш телефон:*</label>
+                  <input class="input-decorate phone-mask require" type="text" placeholder=" +7 000 000 - 00 – 00 ">
+              </div>
+            </div>
+            <div class="col-6"> 
+              <div class="input-box">
+                <label>Интересующий вас товар или услуга:</label>
+                  <input class="input-decorate undefined" type="text" placeholder="Введите наименование">
+              </div>
+            </div>
+            <div class="col-6"> 
+              <div class="input-box">
+                <label>Email:*</label>
+                  <input class="input-decorate check-mail undefined" type="email" placeholder="Введите email">
               </div>
               <div class="input-box">
                 <label>Наименование организации:</label>
-                  <input class="input-decorate undefined" type="text" placeholder="Введите">
+                  <input class="input-decorate undefined" type="text" placeholder="Введите наименование организации">
               </div>
             </div>
             <div class="col-6"> 
               <div class="input-box">
                 <label>Дополнительные комментарии:</label>
-                  <textarea class="input-decorate undefined" placeholder="Введите"></textarea>
+                  <textarea class="input-decorate undefined" placeholder="Введите дополнительные комментарии"></textarea>
               </div>
             </div>
             <div class="col-12"> 
               <div class="input-box">
                 <div class="checkbox agreement">
-                  <label>Согласен (на) на обработку <a href="#">персональных данных </a>
+                  <label>Согласен(на) на обработку <a href="#">персональных данных </a>
                     <input type="checkbox" checked><span></span>
                   </label>
                 </div>
