--- a/html/ux/all-items.html
+++ b/html/ux/all-items.html
@@ -43,7 +43,7 @@
               <div class="blog-item-date">16.09.1986</div>
               <h3><a href="#">Wake dubai</a></h3>
               <div class="blog-item-text">Неважно, новичок вы или опытный любитель водных видов спорта, присоединяйтесь к нам и получите удовольствие от вейкбординга и вейксерфинга на наших новейших спортивных катерах Nautique, Centurion!</div>
-              <div class="btn-container"><a class="btn btn--blue-border" href="#">Подробнее</a></div>
+              <div class="btn-container"><a class="btn btn--black-border" href="#">Подробнее</a></div>
             </div>
           </div>
       </div>
@@ -78,10 +78,10 @@
                   <div>Производительность:</div><b>130-150 т/ч  </b>
                 </li>
                 <li>
-                  <div>Мощность</div><b>80 кВт</b>
+                  <div>Мощность:</div><b>80 кВт</b>
                 </li>
                 <li>
-                  <div>Площадь установки:</div><b>40м3</b>
+                  <div>Площадь установки:</div><b>40м <sup>3 </sup></b>
                 </li>
               </ul>
             </div>
