--- a/html/pages/recycling.html
+++ b/html/pages/recycling.html
@@ -7,7 +7,7 @@
     <link href="/css/lightslider.css" type="text/css" rel="stylesheet">
     <link href="/css/lightbox.css" type="text/css" rel="stylesheet">
     <link href="/fonts/stylesheet.css" type="text/css" rel="stylesheet">
-    <link href="/style.css" type="text/css" rel="stylesheet">
+    <link href="/style-theme.css" type="text/css" rel="stylesheet">
     <script src="/js/jquery-3.6.0.min.js" defer></script>
     <script src="/js/jquery.mask.js" defer></script>
     <script src="/js/lightbox.js" defer></script>
@@ -93,7 +93,15 @@
           <div class="recycling-scale-line"></div>
         </div>
       </div>
-      <div class="recycling-slider-container">
+      <div class="recycling-slider-container slider-container">
+        <div class="main-full">
+          <div class="num-slider"> 
+            <div class="current">
+              <ul class="ln num-box"> </ul>
+            </div><span>/</span>
+            <div class="total">1</div>
+          </div>
+        </div>
         <div class="recycling-slider">
           <div class="recycling-slider-item">
             <div class="main-grid">
