--- a/html/pages/home.html
+++ b/html/pages/home.html
@@ -7,7 +7,7 @@
     <link href="/css/lightslider.css" type="text/css" rel="stylesheet">
     <link href="/css/lightbox.css" type="text/css" rel="stylesheet">
     <link href="/fonts/stylesheet.css" type="text/css" rel="stylesheet">
-    <link href="/style.css" type="text/css" rel="stylesheet">
+    <link href="/style-theme.css" type="text/css" rel="stylesheet">
     <script src="/js/jquery-3.6.0.min.js" defer></script>
     <script src="/js/jquery.mask.js" defer></script>
     <script src="/js/lightbox.js" defer></script>
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="col-3 logo-container vertical-align"><a class="logo logo-white" href="#"> <img src="/images/logo.svg" alt=""></a><a class="logo logo-red" href="#"> <img src="/images/logo-red.svg" alt=""></a></div>
-        <div class="col-9 vertical-align">
+        <div class="col-9 vertical-align hidden-md hidden-sm hidden-xs">
           <nav class="nav-header">
             <ul class="ln">
               <li> <a href="#">Заводы и установки</a></li>
@@ -48,53 +48,56 @@
             </ul>
           </nav>
         </div>
+        <div class="col-9 header-tablet-nav"><a class="btn btn--red" href="#">Стать дилером</a>
+          <div class="hamburger-btn"></div>
+        </div>
       </div>
     </header>
-    <div class="main-home">
+    <div class="main-home slider-container">
       <div class="main-home-img img-cover"><img src="/images/main-bg.jpg" alt=""></div>
       <div class="main-home-gradient"></div>
-      <div class="num-slider"> 
-        <div class="current">
-          <ul class="ln num-box"> </ul>
-        </div><span>/</span>
-        <div class="total">1</div>
+      <div class="main-full">
+        <div class="num-slider"> 
+          <div class="current">
+            <ul class="ln num-box"> </ul>
+          </div><span>/</span>
+          <div class="total">1</div>
+        </div>
+        <div class="main-scroll-down"><i></i></div>
       </div>
       <div class="main-home-slider main-slider">
         <div class="home-slider-item">
           <div class="main-grid">
-            <div class="col-7 col-offset-3">
-              <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>1 Производительностью от 80 до 450 тонн/час</h3>
+            <div class="col-7 col-offset-3 col-offset-md-1">
+              <h2><em> <span style="transition-delay:0.25s">Асфальтобетонные </span></em><em><span style="transition-delay:0.5s">заводы SANY</span></em></h2>
+              <h3><em><span style="transition-delay:0.75s">1 Производительностью от 80 до 450 тонн/час</span></em></h3>
             </div>
           </div>
         </div>
         <div class="home-slider-item"> 
           <div class="main-grid">
             <div class="col-7 col-offset-3">
-              <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>2 Производительностью от 80 до 450 тонн/час</h3>
+              <h2><em> <span style="transition-delay:0.25s">Асфальтобетонные </span></em><em><span style="transition-delay:0.5s">заводы SANY</span></em></h2>
+              <h3><em><span style="transition-delay:0.75s">2 Производительностью от 80 до 450 тонн/час</span></em></h3>
             </div>
           </div>
         </div>
         <div class="home-slider-item"> 
           <div class="main-grid">
             <div class="col-7 col-offset-3">
-              <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>3 Производительностью от 80 до 450 тонн/час</h3>
+              <h2><em> <span style="transition-delay:0.25s">Асфальтобетонные </span></em><em><span style="transition-delay:0.5s">заводы SANY</span></em></h2>
+              <h3><em><span style="transition-delay:0.75s">3 Производительностью от 80 до 450 тонн/час</span></em></h3>
             </div>
           </div>
         </div>
         <div class="home-slider-item"> 
           <div class="main-grid">
             <div class="col-7 col-offset-3">
-              <h2>Асфальтобетонные заводы SANY</h2>
-              <h3>4 Производительностью от 80 до 450 тонн/час</h3>
+              <h2><em> <span style="transition-delay:0.25s">Асфальтобетонные </span></em><em><span style="transition-delay:0.5s">заводы SANY</span></em></h2>
+              <h3><em><span style="transition-delay:0.75s">4 Производительностью от 80 до 450 тонн/час</span></em></h3>
             </div>
           </div>
         </div>
-      </div>
-      <div class="main-full">
-        <div class="main-scroll-down"><i></i></div>
       </div>
     </div>
     <section> 
@@ -104,49 +107,194 @@
            Компания Мерко Руссланд специализируется на строительстве асфальтобетонных заводов и поставке высокотехнологического оборудования и транспорта по обеспечению бесперебойного производства асфальта.</p>
         <p>Мы занимаемся поставкой оборудования для производства бетона, растворобетонных и асфальтобетонных смесей, осуществляя профессиональную поддержку по производству продукции высокого качества и обеспечению бесперебойной работы оборудования, используемого в производственном процессе.</p>
       </div>
-      <div class="about-slider">
-        <div class="main-grid">
-          <div class="col-4">
-            <div class="about-item about-item-main">
-              <div class="img-cover"><img src="/images/temp/z1.jpg" alt=""></div>
-              <div class="about-item-num"> <span>1</span></div>
-            </div>
+      <div class="about-slider-container slider-container">
+        <div class="main-full"> 
+          <div class="num-slider"> 
+            <div class="current">
+              <ul class="ln num-box"> </ul>
+            </div><span>/</span>
+            <div class="total">1</div>
           </div>
-          <div class="col-8">
-            <div class="about-item about-item-info"> 
-              <div class="info-cell">
-                <h3>SLB1500X8</h3>
-                <div>Тип установки</div>
+        </div>
+        <div class="about-slider">
+          <div class="about-slider-item main-grid">
+            <div class="col-4">
+              <div class="about-item about-item-main">
+                <div class="img-cover"><img src="/images/temp/z1.jpg" alt=""></div>
+                <div class="about-item-num"> <span>1</span></div>
               </div>
-              <div class="info-cell">
-                <h3>130-150 т/ч</h3>
-                <div>Производительность </div>
+            </div>
+            <div class="col-8">
+              <div class="about-item about-item-info"> 
+                <div class="info-cell">
+                  <h3>SLB1500X8</h3>
+                  <div>Тип установки</div>
+                </div>
+                <div class="info-cell">
+                  <h3>130-150 т/ч</h3>
+                  <div>Производительность </div>
+                </div>
+                <div class="info-cell">
+                  <h3>40 м<sup>3</sup></h3>
+                  <div>Бункер горячих минералов</div>
+                </div>
+                <div class="info-cell"><a class="more-btn--black" href="#"> <i> </i><span>Подробнее</span></a></div>
               </div>
-              <div class="info-cell">
-                <h3>40 м<sup>3</sup></h3>
-                <div>Бункер горячих минералов</div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-price">
+                <h3>150 млн. руб</h3>
+                <div>Средняя стоимость</div>
+                <div class="btn-container"> <a class="more-btn--white" href="#"> <i></i><span>Забронировать</span></a></div>
               </div>
-              <div class="info-cell"><a class="more-btn--black" href="#"> <i> </i><span>Подробнее</span></a></div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-next">
+                <h3>SLB2000C8</h3>
+                <div>120-160 тонн/час 42 м<sup>3</sup></div>
+                <div class="btn-container"> <a class="more-btn--gray" href="#"> <i></i><span>Следующий завод</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-preview">
+                <div class="img-cover"><img src="/images/temp/z2.jpg" alt=""></div>
+                <div class="about-item-num"> <span>2</span></div>
+              </div>
             </div>
           </div>
-          <div class="col-4">
-            <div class="about-item about-item-price">
-              <h3>150 млн. руб</h3>
-              <div>Средняя стоимость</div>
-              <div class="btn-container"> <a class="more-btn--white" href="#"> <i></i><span>Забронировать</span></a></div>
+          <div class="about-slider-item main-grid">
+            <div class="col-4">
+              <div class="about-item about-item-main">
+                <div class="img-cover"><img src="/images/temp/z1.jpg" alt=""></div>
+                <div class="about-item-num"> <span>1</span></div>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="about-item about-item-info"> 
+                <div class="info-cell">
+                  <h3>SLB1500X8</h3>
+                  <div>Тип установки</div>
+                </div>
+                <div class="info-cell">
+                  <h3>130-150 т/ч</h3>
+                  <div>Производительность </div>
+                </div>
+                <div class="info-cell">
+                  <h3>40 м<sup>3</sup></h3>
+                  <div>Бункер горячих минералов</div>
+                </div>
+                <div class="info-cell"><a class="more-btn--black" href="#"> <i> </i><span>Подробнее</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-price">
+                <h3>150 млн. руб</h3>
+                <div>Средняя стоимость</div>
+                <div class="btn-container"> <a class="more-btn--white" href="#"> <i></i><span>Забронировать</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-next">
+                <h3>SLB2000C8</h3>
+                <div>120-160 тонн/час 42 м<sup>3</sup></div>
+                <div class="btn-container"> <a class="more-btn--gray" href="#"> <i></i><span>Следующий завод</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-preview">
+                <div class="img-cover"><img src="/images/temp/z2.jpg" alt=""></div>
+                <div class="about-item-num"> <span>2</span></div>
+              </div>
             </div>
           </div>
-          <div class="col-4">
-            <div class="about-item about-item-next">
-              <h3>SLB2000C8</h3>
-              <div>120-160 тонн/час 42 м<sup>3</sup></div>
-              <div class="btn-container"> <a class="more-btn--gray" href="#"> <i></i><span>Следующий завод</span></a></div>
+          <div class="about-slider-item main-grid">
+            <div class="col-4">
+              <div class="about-item about-item-main">
+                <div class="img-cover"><img src="/images/temp/z1.jpg" alt=""></div>
+                <div class="about-item-num"> <span>1</span></div>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="about-item about-item-info"> 
+                <div class="info-cell">
+                  <h3>SLB1500X8</h3>
+                  <div>Тип установки</div>
+                </div>
+                <div class="info-cell">
+                  <h3>130-150 т/ч</h3>
+                  <div>Производительность </div>
+                </div>
+                <div class="info-cell">
+                  <h3>40 м<sup>3</sup></h3>
+                  <div>Бункер горячих минералов</div>
+                </div>
+                <div class="info-cell"><a class="more-btn--black" href="#"> <i> </i><span>Подробнее</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-price">
+                <h3>150 млн. руб</h3>
+                <div>Средняя стоимость</div>
+                <div class="btn-container"> <a class="more-btn--white" href="#"> <i></i><span>Забронировать</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-next">
+                <h3>SLB2000C8</h3>
+                <div>120-160 тонн/час 42 м<sup>3</sup></div>
+                <div class="btn-container"> <a class="more-btn--gray" href="#"> <i></i><span>Следующий завод</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-preview">
+                <div class="img-cover"><img src="/images/temp/z2.jpg" alt=""></div>
+                <div class="about-item-num"> <span>2</span></div>
+              </div>
             </div>
           </div>
-          <div class="col-4">
-            <div class="about-item about-item-preview">
-              <div class="img-cover"><img src="/images/temp/z2.jpg" alt=""></div>
-              <div class="about-item-num"> <span>2</span></div>
+          <div class="about-slider-item main-grid">
+            <div class="col-4">
+              <div class="about-item about-item-main">
+                <div class="img-cover"><img src="/images/temp/z1.jpg" alt=""></div>
+                <div class="about-item-num"> <span>1</span></div>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="about-item about-item-info"> 
+                <div class="info-cell">
+                  <h3>SLB1500X8</h3>
+                  <div>Тип установки</div>
+                </div>
+                <div class="info-cell">
+                  <h3>130-150 т/ч</h3>
+                  <div>Производительность </div>
+                </div>
+                <div class="info-cell">
+                  <h3>40 м<sup>3</sup></h3>
+                  <div>Бункер горячих минералов</div>
+                </div>
+                <div class="info-cell"><a class="more-btn--black" href="#"> <i> </i><span>Подробнее</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-price">
+                <h3>150 млн. руб</h3>
+                <div>Средняя стоимость</div>
+                <div class="btn-container"> <a class="more-btn--white" href="#"> <i></i><span>Забронировать</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-next">
+                <h3>SLB2000C8</h3>
+                <div>120-160 тонн/час 42 м<sup>3</sup></div>
+                <div class="btn-container"> <a class="more-btn--gray" href="#"> <i></i><span>Следующий завод</span></a></div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="about-item about-item-preview">
+                <div class="img-cover"><img src="/images/temp/z2.jpg" alt=""></div>
+                <div class="about-item-num"> <span>2</span></div>
+              </div>
             </div>
           </div>
         </div>
