--- a/html/pages/home.html
+++ b/html/pages/home.html
@@ -306,14 +306,14 @@
           <h2>Преимущества<br>асфальтобетонных заводов от компании Мерко Руссланд:</h2>
         </div>
         <div class="col-4"> 
-          <div class="advantages-box">
+          <div class="advantages-box advantages-box-desktop">
             <div class="advantages-bg"></div>
             <h2>Поддержка</h2>
           </div>
         </div>
       </div>
-      <div class="main-grid">
-        <div class="col-4">
+      <div class="advantages-grid main-grid">
+        <div class="advantages-cell advantages-cell-1">
             <div class="advantages-item"> <img src="/images/temp/adv/1.svg" alt="">
               <div class="advantages-item-text">
                 <h3> Строим как стационарные, как и мобильные асфальтобетонные заводы
@@ -321,7 +321,7 @@
               </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="advantages-cell advantages-cell-2">
             <div class="advantages-item"> <img src="/images/temp/adv/2.svg" alt="">
               <div class="advantages-item-text">
                 <h3> Поставляем только высокопроизводительное оборудование
@@ -329,7 +329,7 @@
               </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="advantages-cell advantages-cell-3">
             <div class="advantages-item extra"> <img src="/images/temp/adv/3.svg" alt="">
               <div class="advantages-item-text">
                 <h3> Любое дополнительное оборудование и запасные части в наличии
@@ -337,15 +337,19 @@
               </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="advantages-cell advantages-cell-4">
             <div class="advantages-item"> <img src="/images/temp/adv/4.svg" alt="">
               <div class="advantages-item-text">
                 <h3> Оборудование только от проверенных поставщиков
                 </h3><i></i>
               </div>
             </div>
+          <div class="advantages-box advantages-box-mobile">
+            <div class="advantages-bg"></div>
+            <h2>Поддержка</h2>
+          </div>
         </div>
-        <div class="col-4">
+        <div class="advantages-cell advantages-cell-5">
             <div class="advantages-item"> <img src="/images/temp/adv/5.svg" alt="">
               <div class="advantages-item-text">
                 <h3> Осуществляем техническую и сервисную поддержку
@@ -353,7 +357,7 @@
               </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="advantages-cell advantages-cell-6">
             <div class="advantages-item extra"> <img src="/images/temp/adv/6.svg" alt="">
               <div class="advantages-item-text">
                 <h3> Осуществляем техническую и сервисную поддержку
@@ -374,7 +378,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -401,7 +405,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -428,7 +432,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -455,7 +459,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -495,7 +499,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -522,7 +526,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -549,7 +553,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -576,7 +580,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -616,7 +620,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -643,7 +647,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -670,7 +674,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -697,7 +701,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -737,7 +741,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -764,7 +768,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -791,7 +795,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -818,7 +822,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -858,7 +862,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -885,7 +889,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -912,7 +916,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -939,7 +943,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -979,7 +983,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -1034,7 +1038,7 @@
         </div>
       </div>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -1061,7 +1065,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -1088,7 +1092,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -1115,7 +1119,7 @@
               </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
             <div class="product-item">
               <div class="more-btn--white product-btn-hover"><i></i></div>
               <div class="product-item-img">
@@ -1205,7 +1209,7 @@
     <div class="stub"></div>
     <footer>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="nav nav-second">
             <ul>
               <li> <a href="#"> О компании</a></li>
@@ -1217,7 +1221,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="nav">
             <h3> <a href="#"> Продукция</a></h3>
             <ul>
@@ -1232,12 +1236,12 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="feedback-footer-item"> <span>Официальный представитель Производственная компания "Дорожные технологии" </span><b>B 192148, г. Санкт-Петербург, ул. Седова, д. 13</b></div>
           <div class="feedback-footer-item"><span>Телефон:</span><a href="#">+7 (812) 900 61 90</a></div>
           <div class="feedback-footer-item"><span>Почта:</span><a href="#">info@pk-dorteh.ru</a></div>
         </div>
-        <div class="col-3 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
+        <div class="col-3 col-sm-6 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
           <div class="feedback-footer-item"><a href="#"> +7 (495) 969 58 69</a></div>
           <div class="feedback-footer-item"><a href="#">dds@merko-russland.com</a></div>
           <div class="feedback-footer-item"><span>Адрес:</span><b>141031, МО, г. Мытищи,<br>пос. Нагорное, ул. Центральная, вл. 3, с. 3, пом. 3</b></div>
