--- a/html/ux/footer.html
+++ b/html/ux/footer.html
@@ -36,7 +36,7 @@
     </div>
     <footer>
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="nav nav-second">
             <ul>
               <li> <a href="#"> О компании</a></li>
@@ -48,7 +48,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="nav">
             <h3> <a href="#"> Продукция</a></h3>
             <ul>
@@ -63,12 +63,12 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="feedback-footer-item"> <span>Официальный представитель Производственная компания "Дорожные технологии" </span><b>B 192148, г. Санкт-Петербург, ул. Седова, д. 13</b></div>
           <div class="feedback-footer-item"><span>Телефон:</span><a href="#">+7 (812) 900 61 90</a></div>
           <div class="feedback-footer-item"><span>Почта:</span><a href="#">info@pk-dorteh.ru</a></div>
         </div>
-        <div class="col-3 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
+        <div class="col-3 col-sm-6 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
           <div class="feedback-footer-item"><a href="#"> +7 (495) 969 58 69</a></div>
           <div class="feedback-footer-item"><a href="#">dds@merko-russland.com</a></div>
           <div class="feedback-footer-item"><span>Адрес:</span><b>141031, МО, г. Мытищи,<br>пос. Нагорное, ул. Центральная, вл. 3, с. 3, пом. 3</b></div>
