--- a/html/pages/projects/catalog.html
+++ b/html/pages/projects/catalog.html
@@ -19,11 +19,36 @@
   <!-- range slider-->
   <!-- calendar input-->
   <!-- head end-->
+    <div class="popup element-show menu-hamburger" data-element="0">
+      <div class="popup-overlay popup-overlay-js"></div>
+      <div class="popup-container"> 
+        <div class="close-btn close-btn--popup close-js"></div>
+        <div class="menu-mobile">
+          <div class="menu-header"><a class="logo" href="#"> <img src="/images/logo-red.svg" alt=""></a></div>
+          <nav class="popup-nav">
+            <ul class="ln">
+              <li> <a href="#">Заводы у установки</a></li>
+              <li> <a href="#">Техника</a></li>
+              <li> <a href="#">Проекты</a><i></i>
+                <ul> 
+                  <li> <a href="#">Проект 1</a></li>
+                  <li> <a href="#">Проект 2</a></li>
+                  <li> <a href="#">Проект 3</a></li>
+                  <li> <a href="#">Проект 4</a></li>
+                </ul>
+              </li>
+              <li> <a href="#">Стать дилером</a></li>
+              <li> <a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="menu-footer">
+            <div class="menu-footer-item"> <a class="phone-btn" href="#"> <i></i><span>+7 (495) 969 58 69</span></a></div>
+            <div class="menu-footer-item"> <a class="mail-btn" href="#"> <i></i><span>dds@merko-russland.com</span></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
   <body> 
-    <!-- popup-menu end -->
-    <!-- header start-->
-    <!--include ../blocks/header.pug-->
-    <!-- header end-->
     <header class="stick show">
       <div class="main-grid">
         <div class="col-12">
@@ -145,9 +170,9 @@
       </div>
       <div class="stub"></div>
     </div>
-    <footer>
+    <footer class="footer-desktop">
       <div class="main-grid">
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="nav nav-second">
             <ul>
               <li> <a href="#"> О компании</a></li>
@@ -159,7 +184,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="nav">
             <h3> <a href="#"> Продукция</a></h3>
             <ul>
@@ -174,12 +199,12 @@
             </ul>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 col-sm-6">
           <div class="feedback-footer-item"> <span>Официальный представитель Производственная компания "Дорожные технологии" </span><b>B 192148, г. Санкт-Петербург, ул. Седова, д. 13</b></div>
           <div class="feedback-footer-item"><span>Телефон:</span><a href="#">+7 (812) 900 61 90</a></div>
           <div class="feedback-footer-item"><span>Почта:</span><a href="#">info@pk-dorteh.ru</a></div>
         </div>
-        <div class="col-3 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
+        <div class="col-3 col-sm-6 feedback"><a class="logo" href="./index.html"><img src="/images/logo-black.svg" alt=""></a>
           <div class="feedback-footer-item"><a href="#"> +7 (495) 969 58 69</a></div>
           <div class="feedback-footer-item"><a href="#">dds@merko-russland.com</a></div>
           <div class="feedback-footer-item"><span>Адрес:</span><b>141031, МО, г. Мытищи,<br>пос. Нагорное, ул. Центральная, вл. 3, с. 3, пом. 3</b></div>
