--- a/html/ux/footer.html
+++ b/html/ux/footer.html
@@ -19,11 +19,36 @@
   <!-- range slider-->
   <!-- calendar input-->
   <!-- head end-->
+    <div class="popup element-show menu-hamburger" data-element="0">
+      <div class="popup-overlay popup-overlay-js"></div>
+      <div class="popup-container"> 
+        <div class="close-btn close-btn--popup close-js"></div>
+        <div class="menu-mobile">
+          <div class="menu-header"><a class="logo" href="#"> <img src="/images/logo-red.svg" alt=""></a></div>
+          <nav class="popup-nav">
+            <ul class="ln">
+              <li> <a href="#">Заводы у установки</a></li>
+              <li> <a href="#">Техника</a></li>
+              <li> <a href="#">Проекты</a><i></i>
+                <ul> 
+                  <li> <a href="#">Проект 1</a></li>
+                  <li> <a href="#">Проект 2</a></li>
+                  <li> <a href="#">Проект 3</a></li>
+                  <li> <a href="#">Проект 4</a></li>
+                </ul>
+              </li>
+              <li> <a href="#">Стать дилером</a></li>
+              <li> <a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="menu-footer">
+            <div class="menu-footer-item"> <a class="phone-btn" href="#"> <i></i><span>+7 (495) 969 58 69</span></a></div>
+            <div class="menu-footer-item"> <a class="mail-btn" href="#"> <i></i><span>dds@merko-russland.com</span></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
   <body> 
-    <!-- popup-menu end -->
-    <!-- header start-->
-    <!--include ../blocks/header.pug-->
-    <!-- header end-->
     <div class="stub"></div>
     <div class="main-full">
       <h1>Footer</h1>
@@ -34,7 +59,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt eaque eligendi repellendus eum voluptates recusandae temporibus voluptate minus nesciunt aliquid quaerat, suscipit earum, voluptatem tempora accusantium possimus maxime nulla accusamus?</p>
       </div>
     </div>
-    <footer>
+    <footer class="footer-desktop">
       <div class="main-grid">
         <div class="col-3 col-sm-6">
           <div class="nav nav-second">
