--- a/html/ux/popup-form.html
+++ b/html/ux/popup-form.html
@@ -19,16 +19,41 @@
   <!-- range slider-->
   <!-- calendar input-->
   <!-- head end-->
+    <div class="popup element-show menu-hamburger" data-element="0">
+      <div class="popup-overlay popup-overlay-js"></div>
+      <div class="popup-container"> 
+        <div class="close-btn close-btn--popup close-js"></div>
+        <div class="menu-mobile">
+          <div class="menu-header"><a class="logo" href="#"> <img src="/images/logo-red.svg" alt=""></a></div>
+          <nav class="popup-nav">
+            <ul class="ln">
+              <li> <a href="#">Заводы у установки</a></li>
+              <li> <a href="#">Техника</a></li>
+              <li> <a href="#">Проекты</a><i></i>
+                <ul> 
+                  <li> <a href="#">Проект 1</a></li>
+                  <li> <a href="#">Проект 2</a></li>
+                  <li> <a href="#">Проект 3</a></li>
+                  <li> <a href="#">Проект 4</a></li>
+                </ul>
+              </li>
+              <li> <a href="#">Стать дилером</a></li>
+              <li> <a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="menu-footer">
+            <div class="menu-footer-item"> <a class="phone-btn" href="#"> <i></i><span>+7 (495) 969 58 69</span></a></div>
+            <div class="menu-footer-item"> <a class="mail-btn" href="#"> <i></i><span>dds@merko-russland.com</span></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
   <body> 
-    <!-- popup-menu end -->
-    <!-- header start-->
-    <!--include ../blocks/header.pug-->
-    <!-- header end-->
     <div class="main-full">header</div>
     <div class="main-full">
       <h1>Popup</h1>
     </div>
-      <div class="popup element-show show" data-element="1">
+      <div class="popup element-show" data-element="1">
         <div class="popup-overlay popup-overlay-js"></div>
         <div class="popup-container"> 
           <div class="close-btn close-btn--popup close-js"></div> 
